# HelloProj

./: .gitignore  .releaserc  CMakeLists.txt  Dockerfile  do_test.bat  envoie_sur_git.bat  hello.cpp
.github/workflows/: CD.yml  CI.yml  cmake-multi-platform.yml  semantic-release.yml
cmake/: HelloProjConfig.cmake.in  HelloProjConfig.h.in
include/basic/: message.h
install/cmake/: HelloProjConfig.cmake  basic_target-debug.cmake  basic_target.cmake
install/include/: HelloProjConfig.h
install/lib/: basic.lib
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
